--- a/project.json
+++ b/project.json
@@ -13,7 +13,8 @@
     "Microsoft.EntityFrameworkCore.Tools": {
       "version": "1.0.0-preview1-final",
       "type": "build"
-    }
+    },
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-final"
   },
 
   "tools": {
