--- a/project.json
+++ b/project.json
@@ -18,7 +18,8 @@
       "version": "1.0.0-preview2-final",
       "type": "build"
     },
-    "Microsoft.AspNetCore.StaticFiles": "1.0.0"
+    "Microsoft.AspNetCore.StaticFiles": "1.0.0",
+    "knockoutjs": "3.4.0"
   },
 
   "tools": {
